<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.evan.barberros.Register">

    <android.support.v7.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eff1f2">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#135084"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="Register" />

        </android.support.design.widget.AppBarLayout>
        <android.support.v7.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp">
            <EditText
                android:id="@+id/first_name_field"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/first_name"
                android:padding="8dp"
                android:background="@drawable/border"
                android:shadowColor="#000000"
                />
            <EditText
                android:id="@+id/last_name_field"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/last_name"
                android:padding="8dp"
                android:background="@drawable/border"
                />
            <EditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/email"
                android:padding="8dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/border"
                />
            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="8dp"
                android:background="@drawable/border"
                />
            <EditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:background="@drawable/border"
                />
            <EditText
                android:id="@+id/retype_password_field"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/retype_pass"
                android:inputType="textPassword"
                android:padding="8dp"
                android:background="@drawable/border"
                />
            <EditText
                android:id="@+id/password2_field"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/password2"
                android:inputType="textPassword"
                android:padding="8dp"
                android:background="@drawable/border"
                />
            <EditText
                android:id="@+id/retype_password2_field"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/retype_password2"
                android:inputType="textPassword"
                android:padding="8dp"
                android:background="@drawable/border"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:padding="8dp"
                android:text="@string/prim_secon"
                />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/agreement_check"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/agreement" />
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom">
        <Button
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="#025f8e"
            android:text="SIGN UP"
            android:textColor="#ffffff"
            android:textSize="18dp"/>
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.design.widget.CoordinatorLayout>